--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -34,6 +34,9 @@
   <property name="windowTitle">
    <string>Rossum Rumblers Log App</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <property name="tabShape">
    <enum>QTabWidget::Rounded</enum>
   </property>
